re PR other/53231 (libatomic/tas_n.c:100:10: error: 'ret' undeclared (first use in this function))

PR other/53231
	* tas_n.c (libat_test_and_set): Correct return.  Remove unused variable.

From-SVN: r187783